# ros2_cchess

./: README.md  build.sh  launch.sh  requirements.txt  usb-serial.rules
src/cchess_ros_control/: README.md
src/cchess_ros_control/machinery_camera/chess_corner_recognition/: package.xml  setup.cfg  setup.py
src/cchess_ros_control/machinery_camera/chess_corner_recognition/chess_corner_recognition/: artificial_chess_corner_recognition_node.py
src/cchess_ros_control/machinery_camera/chess_corner_recognition/launch/: artificial_chess_corner_recognition_node.launch.py
src/cchess_ros_control/machinery_camera/pub_camera/: CMakeLists.txt  package.xml
src/cchess_ros_control/machinery_chess_bringup/: CMakeLists.txt  package.xml
src/cchess_ros_control/machinery_chess_bringup/launch/: machinery_chess_bringup.launch.py
src/cchess_ros_control/machinery_chess_bringup/urdf/: machinery.urdf.xacro  machinery_control.urdf.xacro
src/cchess_ros_control/machinery_chess_ros_control_bringup/: CMakeLists.txt  package.xml
src/cchess_ros_control/machinery_chess_ros_control_bringup/launch/: machinery_chess_ros_control_bringup.launch.py
src/cchess_ros_control/machinery_chess_ros_control_bringup/urdf/: machinery.urdf.xacro  machinery_control.urdf.xacro
src/cchess_ros_control/machinery_model/: CMakeLists.txt  package.xml
src/cchess_ros_control/machinery_model/config/: machinery_model.yaml  urdf.rviz
src/cchess_ros_control/machinery_model/launch/: display.launch.py  gazebo.launch.py
src/cchess_ros_control/machinery_model/meshes/: base_link.STL  camera_link.STL  gripper_link.STL  link5.STL
src/cchess_ros_control/machinery_model/urdf/: machinery_model.csv  machinery_model.urdf.xacro
src/cchess_ros_control/machinery_ros2control/controller/gripper_suction_controller/: CMakeLists.txt  gripper_suction_controller.xml  package.xml
src/cchess_ros_control/machinery_ros2control/controller/gripper_suction_controller/include/gripper_suction_controller/: validate_gripper_suction_controller_parameters.hpp
src/cchess_ros_control/machinery_ros2control/controller/gripper_suction_controller/src/: gripper_suction_controller.yaml
src/cchess_ros_control/machinery_ros2control/controller/machinery_controller/: CMakeLists.txt  machinery_controller.xml  package.xml
src/cchess_ros_control/machinery_ros2control/controller/machinery_controller/include/machinery_controller/: machinery_controller.hpp
src/cchess_ros_control/machinery_ros2control/controller/machinery_controller/src/: machinery_controller.cpp
src/cchess_ros_control/machinery_ros2control/machinery_control/: CMakeLists.txt  package.xml
src/cchess_ros_control/machinery_ros2control/machinery_control/src/: machinery_command_control_topic.cpp
src/cchess_ros_control/machinery_ros2control/machinery_control_msg/: CMakeLists.txt  package.xml
src/cchess_ros_control/machinery_ros2control/machinery_control_msg/msg/: TaskStatus.msg
src/cchess_ros_control/machinery_ros2control/machinery_controller/: CMakeLists.txt  package.xml
src/cchess_ros_control/machinery_ros2control/machinery_controller/cartesian_move_controller/: CMakeLists.txt  cartesian_move_controller.xml  package.xml
src/cchess_ros_control/machinery_ros2control/machinery_controller/cartesian_move_controller/include/cartesian_move_controller/: cartesian_move_controller.hpp
src/cchess_ros_control/machinery_ros2control/machinery_controller/gripper_suction_controller/: package.xml
src/cchess_ros_control/machinery_ros2control/machinery_controller/gripper_suction_controller/include/gripper_suction_controller/: gripper_suction_controller.hpp  validate_gripper_suction_controller_parameters.hpp
src/cchess_ros_control/machinery_ros2control/machinery_controller/gripper_suction_controller/src/: gripper_suction_controller.cpp  gripper_suction_controller.yaml
src/cchess_ros_control/machinery_ros2control/machinery_controller/include/machinery_controller/: machinery_controller.hpp
src/cchess_ros_control/machinery_ros2control/machinery_controller/src/: machinery_controller.cpp
src/cchess_ros_control/machinery_ros2control/machinery_hardware_interface/: CMakeLists.txt  machinery_hardware_interface.xml  package.xml
src/cchess_ros_control/machinery_ros2control/machinery_hardware_interface/include/machinery_hardware_interface/: machinery_hardware_interface.hpp  tool.hpp  visibility_control.h
src/cchess_ros_control/machinery_ros2control/machinery_hardware_interface/src/: machinery_hardware_interface.cpp
src/cchess_ros_control/machinery_ros2control/machinery_hardware_interface/test/: machinery_test.cpp  test_machinery_hardware_interface.cpp  test_regex.cpp
src/cchess_ros_control/machinery_ros2control/machinery_keyboard_control/: package.xml  setup.cfg  setup.py
src/cchess_ros_control/machinery_ros2control/machinery_ros2control_bringup/: CMakeLists.txt  package.xml  urdf
src/cchess_ros_decision/: package.xml  setup.cfg  setup.py
src/cchess_ros_decision/cchess_ros_decision/: chess_camera.py  chess_engine_node.py  chessboard_recognizer_node.py  rob_engine_node.py
src/cchess_ros_decision/cchess_ros_decision/reg_core/: chessboard_detector.py  engine.py  helper_cls.py  helper_functions.py  kpt_4_with_xanything.py
src/chess_qt/qt_chess_p/: main_window.py  ros_interface.py
src/chess_qt/qt_chess_p/config/: config.yaml  test.py
src/chess_qt/qt_chess_p/games/: game_28.pgn  game_28_analysis.json
src/chess_qt/qt_chess_p/pages/: game_page.py  history_page.py  mode_choose_page.py  settings_page.py  start_page.py
src/chess_qt/qt_chess_p/resources/: styles.qss
src/chess_qt/qt_point/: qt_point.py  test_qt_point.py
src/chess_qt/qt_point/right/: position.csv
src/qt_chess_py/: main.py  main_window.py  ros_interface.py
src/qt_chess_py/config/: config.yaml
src/qt_chess_py/pages/: game_page.py  mode_choose_page.py  settings_page.py  start_page.py
src/ros2_chess_bringup/: CMakeLists.txt  package.xml
src/ros2_chess_bringup/launch/: cchess_person.launch.py  cchess_rob.launch.py  machinery_chess_bringup.launch.py
(+41 files in other folders)
